--- a/config.yaml
+++ b/config.yaml
@@ -6,3 +6,48 @@ paths:
     scaler: "/Users/ayesha/Desktop/Project/models/scaler.pkl"
     label_encoder: "/Users/ayesha/Desktop/Project/models/label_encoder.pkl"
     columns: "/Users/ayesha/Desktop/Project/models/training_columns.pkl"
+name: CI/CD Pipeline for MLOps Project
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Step 1: Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      # Step 2: Set up Python
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # Step 4: Run tests (if you have any)
+      - name: Run tests
+        run: |
+          pytest tests/
+
+      # Step 5: Run pipeline script
+      - name: Run pipeline script
+        run: |
+          python src/pipeline.py
+
+      # Step 6: Run evaluation script
+      - name: Evaluate Model
+        run: |
+          python src/evaluate_model.py
